--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,18 +1,7 @@
 version: "3"
 
 tasks:
-  gen:sso:
+  generate:
     desc: "Generate Go code from sso.proto"
     cmds:
-      - |
-        protoc `
-          --proto_path=protos/proto `
-          --go_out=protos/gen/go `
-          --go_opt=paths=source_relative `
-          --go-grpc_out=protos/gen/go `
-          --go-grpc_opt=paths=source_relative `
-          protos/proto/sso/sso.proto
-    sources:
-      - protos/proto/sso/sso.proto
-    generates:
-      - protos/gen/go/sso/*.go
+      - protoc --proto_path=proto --go_out=gen/go --go_opt=paths=source_relative --go-grpc_out=gen/go --go-grpc_opt=paths=source_relative proto/sso/sso.proto
